infraestructura_cloud.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Infraestructura IaaS Para IoT'

Parameters:
  KeyName:
    Description: "Nombre de tu llave .pem existente en AWS para entrar por SSH"
    Type: AWS::EC2::KeyPair::KeyName

Resources:

  IoTSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Puertos IoT: SSH, MQTT, Grafana e InfluxDB"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 1883
          ToPort: 1883
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8086
          ToPort: 8086
          CidrIp: 0.0.0.0/0

  IoTInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t3.micro
      ImageId: ami-07062e2a343acc423
      KeyName: !Ref KeyName
      SecurityGroups:
        - !Ref IoTSecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          apt-get update -y
          apt-get install -y docker.io
          systemctl start docker
          systemctl enable docker

          curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
          chmod +x /usr/local/bin/docker-compose

          mkdir -p /home/ubuntu/iot_practica
          chown ubuntu:ubuntu /home/ubuntu/iot_practica

Outputs:
  PublicIP:
    Description: "IP Pública de tu nuevo servidor"
    Value: !GetAtt IoTInstance.PublicIp
